# lazysodium

./: .gitignore  CHANGELOG.md  Makefile  README.md  libsodium.h  pubspec.yaml
android/: build.gradle  local.properties  settings.gradle
example/: README.md  pubspec.yaml
example/.dart_tool/: package_config.json  package_config_subset
example/android/: local.properties
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart  service_locator.dart
example/linux/: CMakeLists.txt  my_application.cc
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
ios/: lazysodium.podspec
ios/Classes/: LazysodiumPlugin.swift
ios/Runner/: lazysodium.h
lazysodium/: Cargo.toml  Makefile
lazysodium/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
lib/: lazysodium.binding.dart  lazysodium.d.dart  lazysodium.dart  lazysodium.g.dart  lazysodium.loader.dart  lazysodium_extensions.dart  lazysodium_method_channel.dart  lazysodium_platform_interface.dart  lazysodium_web.dart
lib/crypto/: lazysodium_box.dart  lazysodium_box_beforenm.dart  lazysodium_secret_box.dart  lazysodium_stream_chacha20_xor.dart
lib/helper/: lazysodium_helper.dart
lib/kx/: lazysodium_kx.dart
linux/: CMakeLists.txt  lazysodium_plugin.cc  lazysodium_plugin_private.h
linux/test/: lazysodium_plugin_test.cc
macos/: lazysodium.podspec
test/: lazysodium_method_channel_test.dart  lazysodium_test.dart
windows/: CMakeLists.txt  lazysodium_plugin.cpp  lazysodium_plugin.h  lazysodium_plugin_c_api.cpp
(+32 files in other folders)
