[package]
name = "lazysodium"
version = "0.1.0"
edition = "2021"

[lib]
name = "lazysodium"
# this is needed to build for iOS and Android.
crate-type = ["lib", "staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "1.81.0"
libsodium-sys-stable = "1.19.30"
libc = "0.2"
lazy_static = "1.4"

[profile.release]
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"
